Updates to README.md on Compilling and Running